plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring boot starter
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// 웹 어플리케이션 개발
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	// h2 database
	implementation 'com.h2database:h2'

	// jwt
	implementation 'com.auth0:java-jwt:4.0.0'

	//mysql
	implementation 'mysql:mysql-connector-java:8.0.33'

	// AWS
	implementation(platform('software.amazon.awssdk:bom:2.27.21'))
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:auth'

}

tasks.named('test') {
	useJUnitPlatform()
}
